user route updated and swagger
